--- a/mysql/map.jinja
+++ b/mysql/map.jinja
@@ -20,6 +20,7 @@
       'debconf_utils_pkg': 'debconf-utils',
       'server_pkg': 'percona-server-server-' ~ mysql_settings.version,
       'client_pkg': 'percona-server-client-' ~ mysql_settings.version,
+      'python_pkg': 'python-mysqldb',
       'server_svc': 'mysql',
       'config_directory': '/etc/mysql/conf.d',
       'config_file': '/etc/mysql/my.cnf',
@@ -38,6 +39,7 @@
       'debconf_utils_pkg': 'debconf-utils',
       'server_pkg': 'mariadb-server-' ~ mysql_settings.version,
       'client_pkg': 'mariadb-server-' ~ mysql_settings.version,
+      'python_pkg': 'python-mysqldb',
       'server_svc': 'mysql',
       'config_directory': '/etc/mysql/conf.d',
       'config_file': '/etc/mysql/my.cnf',
@@ -57,6 +59,7 @@
         'debconf_utils_pkg': 'debconf-utils',
         'server_pkg': 'mysql-community-server',
         'client_pkg': 'mysql-community-client',
+        'python_pkg': 'python-mysqldb',
         'server_svc': 'mysql',
         'config_directory': '/etc/mysql/conf.d',
         'config_file': '/etc/mysql/my.cnf',
@@ -75,6 +78,7 @@
         'debconf_utils_pkg': 'debconf-utils',
         'server_pkg': 'mysql-server-' ~ mysql_settings.version,
         'client_pkg': 'mysql-client-' ~ mysql_settings.version,
+        'python_pkg': 'python-mysqldb',
         'server_svc': 'mysql',
         'config_directory': '/etc/mysql/conf.d',
         'config_file': '/etc/mysql/my.cnf',
