--- a/mysql/map.jinja
+++ b/mysql/map.jinja
@@ -25,7 +25,7 @@
       'server_svc': 'mysql',
       'config_directory': '/etc/mysql/conf.d',
       'config_file': '/etc/mysql/my.cnf',
-      'backup_script': '/usr/local/bin/backup.sh',
+      'backup_script': '/usr/local/bin/mysql_backup.sh',
       'backup_log': '/var/log/mysql/backup.log',
       'repo': {
           'humanname': 'percona',
