--- a/mysql/templates/backup.sh.j2
+++ b/mysql/templates/backup.sh.j2
@@ -31,4 +31,4 @@ done
 
 echo
 echo -ne "purge old backups"
-find "${BACKUP_DIR}" -mtime +${RETENTION} -exec rm -vf {} \;
+find "${BACKUP_DIR}" -mindepth 1 -maxdepth 1 -mtime +${RETENTION} -exec rm -vf {} \;
